# knowit-cmake

./: .gitignore
basic/1/: CMakeLists.txt
basic/2/: CMakeLists.txt
basic/3/: CMakeLists.txt
basic/3/jokkieg/: lib.hpp
basic/4/: CMakeLists.txt
basic/5/: CMakeLists.txt
basic/6/: CMakeLists.txt
basic/6user/: CMakeLists.txt  main.cpp
basic/7/: CMakeLists.txt
basic/8/: CMakeLists.txt  main.cpp
basic/8/jokkieg/: lib.cpp
basic/8user/: CMakeLists.txt
basic/9/: CMakeLists.txt
dependencies/1/: CMakeLists.txt  main.cpp  vcpkg.json
dependencies/2/: CMakeLists.txt  main.cpp
